he is the person in charge of the merges. To identify the developer responsible
for a given patch, see the "new patches" section of each log.

____________________________________________________________________
** CHANGES ALONG siesta@uam.es--2006/siesta-devel--reference--2.1
--------------------------------------------------------------------

2007-02-21 10:50 GMT Alberto Garcia <albertog@icmab.es>      patch-38

Summary: Fix of zmatrix code to deal with degenerate case
Keywords: 

(Colin Glass, Alberto Garcia)

The first three atoms in a zmatrix molecule are special.  The torsion
angle of the third is specified with respect to a plane formed by the
first two atoms and a notional atom located along the z axis from the
second. If the second atom is located also along the z axis from the
first, the plane is undefined. 

The routine to compute the cartesian coordinates from the Zmatrix
coordinates deals now with the third atom in a more controlled way,
and uses the phi angle of the second atom (which should be specified
even if theta=0) to determine correctly the reference plane for the
torsion.

Notation: the atoms used as reference for the calculation of the
position of the current atom are:

i: determines the bond length
j: together with i, determines the angle theta
k: together with i and j, determines the reference plane for the torsion.

In case of alignment of i,j, and k, we use the azimuth (phi) of i with
respect to j to fix the reference plane.

If "i" is the first atom in the Zmatrix, its Zmatrix coordinates are X
Y Z, and we cannot use its "phi angle" as reference, but in fact this
angle can be easily computed as phi_ref = phi_ji - pi, where phi_ji is
the azimuth of the j atom with respect to i.

Routine z2cgen is passed phi_ref after checking the above conditions.

This fix only applies only to the calculation of the coordinates of the third
atom, but it could presumably be generalized to intercept singular cases