@@ -10,6 +10,18 @@ ____________________________________________________________________
 ** CHANGES ALONG siesta@uam.es--2006/siesta-devel--reference--2.1
 --------------------------------------------------------------------
 
+2007-02-21 10:55 GMT Alberto Garcia <albertog@icmab.es>      patch-39
+
+Summary: Fix units conversion in Util/Optical/optical.f
+Keywords:
+
+(Daniel Sanchez)
+
+Optical.f is a program to analyze the file .EPSIMG and obtain the
+optical properties. A unit conversion was done from eV to Ry instead
+of to Ha.
+
+
 2007-02-21 10:50 GMT Alberto Garcia <albertog@icmab.es>      patch-38
 
 Summary: Fix of zmatrix code to deal with degenerate case
